small margin bug on tablet devices on e1 layouts

--- a/src/packages/modules/editorial-layouts-e1/css/_responsive-editorial-layouts-e1.scss
+++ b/src/packages/modules/editorial-layouts-e1/css/_responsive-editorial-layouts-e1.scss
@@ -32,6 +32,11 @@ $superDesktop: px-em(1200);
   .editorial.full-inner,
   .editorial.full-tout,
   .editorial.full {
+
+    .box {
+      margin-top: 0;
+    }
+
     .submodule > .image-module {
       height: 440px;
     }
